[gd_scene load_steps=12 format=3 uid="uid://ye6jjalknsgf"]

[ext_resource type="Script" path="res://ver_1/character/enemy/MinorBug/minor_bug.gd" id="1_atini"]
[ext_resource type="Texture2D" uid="uid://dy7hpx0c7gkrt" path="res://CommonBug.png" id="2_gy68r"]
[ext_resource type="PackedScene" uid="uid://c48dnnj6ck6nx" path="res://ver_1/status_effects/status_holder.tscn" id="3_q356f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3fvn6"]
atlas = ExtResource("2_gy68r")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d31sg"]
atlas = ExtResource("2_gy68r")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rdm1"]
atlas = ExtResource("2_gy68r")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_e7gsg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fvn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d31sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rdm1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gxrls"]
radius = 12.5

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1m36h"]
radius = 35.0
height = 90.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gmdls"]
radius = 16.4412

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_t27sw"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="MinorBug" type="CharacterBody2D"]
scale = Vector2(0.2, 0.2)
collision_layer = 4
collision_mask = 4
script = ExtResource("1_atini")
max_health = 150
speed = 50
dmg = 10.0
xp_drop_spread = 5
char_name = "Big Pest"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_e7gsg")
frame_progress = 0.912963
offset = Vector2(0, -2)

[node name="CollisionBox" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_gxrls")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_1m36h")
debug_color = Color(0.930156, 0.224969, 0.360381, 0.42)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
rotation = 1.5708
scale = Vector2(4, 4)
shape = SubResource("CircleShape2D_gmdls")
debug_color = Color(0, 0.592183, 0.742917, 0.42)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_t27sw")

[node name="StatusHolder" parent="." instance=ExtResource("3_q356f")]
